import * as grpc from '@grpc/grpc-js';
import * as protoLoader from '@grpc/proto-loader';
import * as path from 'path';

// Configura√ß√£o do endpoint (ser√° atualizado quando o professor disponibilizar)
const AV_SERVICE_URL = process.env.AV_SERVICE_URL || 'localhost:9091';

// Carregar o ficheiro proto
const PROTO_PATH = path.join(__dirname, '../../proto/voting.proto');

const packageDefinition = protoLoader.loadSync(PROTO_PATH, {
  keepCase: true,
  longs: String,
  enums: String,
  defaults: true,
  oneofs: true,
});

const protoDescriptor = grpc.loadPackageDefinition(packageDefinition) as any;
const voting = protoDescriptor.voting;

/**
 * Cliente para a Autoridade de Vota√ß√£o (AV)
 * Respons√°vel por gerir o processo de vota√ß√£o
 */
class AVClient {
  private client: any;

  constructor(serviceUrl: string) {
    // Criar cliente gRPC
    this.client = new voting.VotingService(
      serviceUrl,
      grpc.credentials.createInsecure()
    );
    
    console.log(`üîó Cliente AV conectado a: ${serviceUrl}`);
  }

  /**
   * Obter lista de candidatos dispon√≠veis
   */
  async getCandidates(): Promise<any[]> {
    return new Promise((resolve, reject) => {
      console.log(`\nüìã A obter lista de candidatos...`);

      this.client.GetCandidates({}, (error: grpc.ServiceError | null, response: any) => {
        if (error) {
          console.error('‚ùå Erro ao obter candidatos:', error.message);
          reject(error);
          return;
        }

        console.log('\n‚úÖ Candidatos dispon√≠veis:');
        response.candidates.forEach((candidate: any) => {
          console.log(`   [${candidate.id}] ${candidate.name}`);
        });

        resolve(response.candidates);
      });
    });
  }

  /**
   * Submeter um voto
   * @param votingCredential Credencial de vota√ß√£o obtida da AR
   * @param candidateId ID do candidato escolhido
   */
  async vote(votingCredential: string, candidateId: number): Promise<void> {
    return new Promise((resolve, reject) => {
      console.log(`\nüó≥Ô∏è  A submeter voto...`);
      console.log(`   Credencial: ${votingCredential}`);
      console.log(`   Candidato ID: ${candidateId}`);

      const request = {
        voting_credential: votingCredential,
        candidate_id: candidateId,
      };

      this.client.Vote(request, (error: grpc.ServiceError | null, response: any) => {
        if (error) {
          console.error('‚ùå Erro ao votar:', error.message);
          reject(error);
          return;
        }

        console.log('\nüì® Resposta:');
        console.log(`   Sucesso: ${response.success ? 'Sim ‚úì' : 'N√£o ‚úó'}`);
        console.log(`   Mensagem: ${response.message}`);

        if (response.success) {
          console.log('   üéâ Voto registado com sucesso!');
        } else {
          console.log('   ‚ö†Ô∏è  Voto recusado!');
        }

        resolve();
      });
    });
  }

  /**
   * Obter resultados da vota√ß√£o
   */
  async getResults(): Promise<void> {
    return new Promise((resolve, reject) => {
      console.log(`\nüìä A obter resultados da vota√ß√£o...`);

      this.client.GetResults({}, (error: grpc.ServiceError | null, response: any) => {
        if (error) {
          console.error('‚ùå Erro ao obter resultados:', error.message);
          reject(error);
          return;
        }

        console.log('\n‚úÖ Resultados da Vota√ß√£o:');
        console.log('='.repeat(50));
        
        let totalVotes = 0;
        response.results.forEach((result: any) => {
          totalVotes += result.votes;
        });

        response.results.forEach((result: any) => {
          const percentage = totalVotes > 0 ? ((result.votes / totalVotes) * 100).toFixed(2) : '0.00';
          console.log(`   [${result.id}] ${result.name}`);
          console.log(`       Votos: ${result.votes} (${percentage}%)`);
        });

        console.log('='.repeat(50));
        console.log(`   Total de votos: ${totalVotes}`);

        resolve();
      });
    });
  }

  /**
   * Fechar conex√£o
   */
  close(): void {
    grpc.closeClient(this.client);
    console.log('\nüîå Conex√£o fechada.');
  }
}

/**
 * Fun√ß√£o principal para testar o cliente
 */
async function main() {
  console.log('='.repeat(60));
  console.log('üó≥Ô∏è  CLIENTE AUTORIDADE DE VOTA√á√ÉO (AV)');
  console.log('='.repeat(60));

  const client = new AVClient(AV_SERVICE_URL);

  try {
    // Teste 1: Obter lista de candidatos
    const candidates = await client.getCandidates();

    // Teste 2: Votar com credencial v√°lida
    await client.vote('CRED-ABC-123', 1);

    // Teste 3: Tentar votar com credencial inv√°lida
    await client.vote('INVALID-XYZ', 2);

    // Teste 4: Votar com outra credencial v√°lida
    await client.vote('CRED-DEF-456', 2);

    // Teste 5: Obter resultados
    await client.getResults();

  } catch (error) {
    console.error('Erro durante a execu√ß√£o:', error);
  } finally {
    client.close();
  }

  console.log('\n' + '='.repeat(60));
  console.log('‚úÖ Testes conclu√≠dos!');
  console.log('='.repeat(60));
}

// Executar se for chamado diretamente
if (require.main === module) {
  main().catch(console.error);
}

export { AVClient };
